hw/kdrive/ephyr/ephyrinit.c
@@ -97,6 +97,7 @@ InitInput (int argc, char **argv)
 void
 CloseInput (void)
 {
+  KdCloseInput();
 }
 
 #ifdef DDXBEFORERESET
